js/src/tests/test262/built-ins/Error/prototype/constructor/S15.11.4.1_A1_T1.js
if
(
Error
.
prototype
.
constructor
!
=
=
Error
)
{
ERROR
(
'
#
1
:
Error
.
prototype
.
constructor
=
=
=
Error
.
Actual
:
'
+
Error
.
prototype
.
constructor
)
;
}
reportCompare
(
0
0
)
;
